# robomaster_sim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  lua_api.md  robomaster.cpp  test.cpp  test_encoder.cpp  test_robot.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-vcpkg-plugin.yaml  build-vcpkg.yaml  build.yaml
coppeliaSim_plugin/: CMakeLists.txt  callbacks.xml  coppeliasim_robot.cpp  coppeliasim_robot.hpp  plugin.cpp  simRobomaster.lua  simSkel.lua
examples/: camera.py  chassis.py  client.py  connect.py  discover.py  discovery.py  led.py  move.py  patch_ftp.py  showoff_ep.py  showoff_s1.py  tof.py
include/: action.hpp  command.hpp  command_messages.hpp  command_subjects.hpp  command_topics.hpp  connection.hpp  connection_messages.hpp  discovery.hpp  dummy_robot.hpp  encoder.hpp  event.hpp  message.hpp  messages.hpp  protocol.hpp  robomaster.hpp  robot.hpp  rt_dummy_robot.hpp  rt_topic.hpp  server.hpp  streamer.hpp  subject.hpp  subscriber_messages.hpp  topic.hpp  topics.hpp  utils.hpp
include/robot/: action.hpp  arm.hpp  armor.hpp  blaster.hpp  camera.hpp  chassis.hpp  gimbal.hpp  gripper.hpp  led.hpp  robot.hpp  servo.hpp  tof.hpp  vision.hpp
models/: RoboMasterDistanceSensor.ttm  RoboMasterEP.ttm  RoboMasterS1.ttm
models/v2/: RoboMasterS1.ttm
scenes/: base_arm_plugin.ttt  base_camera_plugin.ttt  base_plugin.ttt  complete_plugin_correct_camera.ttt  complete_plugin_with_camera_zero_correct_gripper.ttt  ep.ttt  ground_truth_ros2_tf.ttt  playground_tof_ep.ttt  playground_tof_s1.ttt  s1.ttt
src/: action.cpp  command.cpp  connection.cpp  discovery.cpp  dummy_robot.cpp  encoder.cpp  protocol.cpp  robomaster.cpp  robot.cpp  rt_dummy_robot.cpp  rt_topic.cpp  server.cpp  streamer.cpp  test.cpp  test_encoder.cpp  topic.cpp  topics.cpp  utils.cpp
src/robot/: action.cpp  arm.cpp  chassis.cpp  gimbal.cpp  led.cpp  robot.cpp  vision.cpp
test/: chassis.py  discovery.py  ftpless.py  led.py  servo3.py
